src/test/deca/context/invalid/Obj/appel-methode-mauvaisesig.deca
// Description:
//    Appel à une méthode avec une mauvaise signature
//
// Résultat:
//Le nombre de paramètres de la méthode appeléene correspond pas à celui de la méthode déclarée
//
class A {
    void methode(){}
}
{
    A a = new A();
    a.methode(5);
}